# claudeClinicalBridge

./: .env.example  .gitignore  README.md  UI plan  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  evaluation.yml  security-scan.yml
docs/: CODE_REVIEW_ORACLE_HEALTH.md  FIXES_APPLIED.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  PHASE7_COMPLETE.md  PHASE8_COMPLETE.md  PRIORITY2_FIXES.md  TESTING_COMPLETE.md  agents.md  architecture.md  code_review_fixes.md  code_review_phase2.md  cpt_licensing.md  epic_fhir_setup.md  epic_test_results.md  evaluation.md  fixes_applied_phase2.md  hipaa_compliance.md  hitl_ui_implementation_plan.md  mcp_servers.md  oracle_health_setup.md
scripts/: demo_epic_fhir.py  index_medical_codes.py  init_db.py  init_db.sql  run_evaluation.py  seed_admin.py
src/python/: __init__.py
src/python/agents/: __init__.py  base_agent.py  clinical_documentation.py  compliance.py  medical_coding.py  prior_authorization.py  quality_assurance.py
src/python/api/: __init__.py  dependencies.py  main.py  models.py  schemas.py
src/python/api/routers/: auth.py  phases.py  workflows.py
src/python/evaluation/: __init__.py  clinical_validity.py  coding_accuracy.py  compliance_rate.py  hallucination_audit.py  latency_tracker.py
src/python/fhir/: __init__.py  base_client.py
src/python/mcp_servers/: __init__.py
src/python/mcp_servers/epic_fhir/: __init__.py  client.py  server.py
src/python/mcp_servers/medical_knowledge/: __init__.py  embeddings.py  search.py  server.py
src/python/mcp_servers/oracle_fhir/: client.py  server.py
src/python/mcp_servers/payer_policy/: __init__.py  policy_store.py  server.py
src/python/orchestration/: __init__.py  coordinator.py  state.py  workflow.py
src/python/security/: __init__.py  audit_logger.py  encryption.py  phi_redactor.py
src/python/skills/: __init__.py  clinical_reasoning_skill.md  coding_accuracy_skill.md  medical_terminology_skill.md  regulatory_compliance_skill.md  skill_loader.py
src/python/utils/: __init__.py  config.py  database.py  logging.py
src/typescript/: package-lock.json  package.json
src/typescript/src/: App.css  App.tsx  index.css
src/typescript/src/api/: auth.ts  client.ts  workflows.ts
src/typescript/src/components/: ClinicalNotePane.tsx  Layout.tsx  PhaseCard.tsx  PhaseContentPanel.tsx  PhaseEditor.tsx  PhaseStepper.tsx  ProtectedRoute.tsx
src/typescript/src/pages/: CreateWorkflow.tsx  Dashboard.tsx  Login.tsx  WorkflowDetail.tsx
src/typescript/src/types/: api.ts  schemas.ts
tests/evaluation/test_cases/: golden_dataset.json
tests/integration/: test_end_to_end.py  test_epic_integration.py  test_oracle_integration.py
tests/unit/test_agents/: test_agents.py
tests/unit/test_evaluation/: test_evaluation.py
tests/unit/test_mcp_servers/: test_epic_fhir.py  test_medical_knowledge.py  test_oracle_fhir.py  test_payer_policy.py
tests/unit/test_orchestration/: test_orchestration.py
tests/unit/test_security/: test_security.py
tests/unit/test_skills/: test_skill_loader.py
(+11 files in other folders)
